# FrameCourier

./: .gitignore  CLAUDE_BRIEF.md  README.md  ROADMAP.md  decode.py  embed.py  encode.py  extract.py  framecourier.py  framecourier_gui.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
datavideo/: audit.py  bech32.py  benchmark.py  carrier.py  cli.py  config.py  core.py  cover.py  cover_quality.py  crypto.py  decoder.py  ecc.py  encoder.py  explain.py  extractor.py  ffmpeg_tools.py  fingerprint.py  gui.py  probe_analysis.py  recipes.py  segmenter.py  steganalysis.py  stego.py  stego_carrier.py  why.py
tests/: test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_roundtrip.py  test_stego.py  test_v2_cli.py  test_z_distributed_segments.py
tools/: check_env.py
