[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framecourier"
version = "1.0.0"
description = "Hide arbitrary binary files inside lossless H.264 video carriers, with AEAD encryption, Reed-Solomon ECC, and multiple LSB stego modes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "FrameCourier contributors" }]
keywords = ["steganography", "video", "ffmpeg", "h264", "lsb", "aes", "argon2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41",
    "numpy>=1.24",
    "argon2-cffi>=23",
    "reedsolo>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
framecourier = "datavideo.cli:main"

[project.urls]
Homepage = "https://github.com/mohamadyaghoobii/FrameCourier"

[tool.setuptools]
packages = ["datavideo"]
py-modules = ["framecourier"]
